# Pj.seminar-Regelungstechnik

./: Coordinate Correction.ipynb  Data Merge & Visualization.ipynb  Data Merge.ipynb  Data Visualization.ipynb  EKF_node.py  Gaussian Process Regression.ipynb  KFRealTime.py  KFRealTime2.py  Kalman_filter.py  MHE KF plot sim result.ipynb  MHE.ipynb  MHERealTime.py  MheHamster.py  MheMultipleShooting.py  MheSingleShooting.py  README.md  Trajectory_prediction_imu.html  Trajectory_prediction_imu.py  carLength.py  data_process_from_rosbags.py  e_R_o.csv  euler_from_quaternion.py  get_data.py  interpolation.py  load_write_data.py  model.py  model_3d.py  model_all.py  model_kf.py  plot report.ipynb  plot_sim_result.py  plotting.py  ros2_procedure  run.py  simulation header_stamp.ipynb  simulation.ipynb  simulation.py  simulation_all global_time.html  simulation_all imu_header tf_global.html  simulation_all imu_header tf_header.html  (+4 more)
data/: data.hamster2__command.csv  data.hamster2__imu.csv  data.tf.csv  data_2023_03_01-16_48_29.csv  data_new_recombine.csv  data_new_recombine_interpolate.csv
data/data_2023_03_01-16_48_29/: data.hamster2__velocity.csv  data_2023_03_01-16_48_29.csv  data_merge.csv
hamster-projectseminar-summer-2023/: README.md
hamster-projectseminar-summer-2023/src/: CPPLINT.cfg
hamster-projectseminar-summer-2023/src/hamster_driver/: CMakeLists.txt  README.md  package.xml
hamster-projectseminar-summer-2023/src/hamster_driver/include/hamster_driver/: hamster_serial.hpp
hamster-projectseminar-summer-2023/src/hamster_driver/include/serialib/: serialib.h
hamster-projectseminar-summer-2023/src/hamster_driver/scripts/: EKF_node.py  KFRealTime.py  o_R_e.csv  test_node.py
hamster-projectseminar-summer-2023/src/hamster_driver/src/: hamster_serial.cpp  serialib.cpp
hamster-projectseminar-summer-2023/src/hamster_interfaces/: CMakeLists.txt  README.md
hamster-projectseminar-summer-2023/src/hamster_interfaces/msg/: TrackingControllerState.msg  VelocityWithHeader.msg
hamster-projectseminar-summer-2023/src/hamster_launch/: package.xml
hamster-projectseminar-summer-2023/src/hamster_launch/hamster_launch/: robot_name.py
hamster-projectseminar-summer-2023/src/hamster_launch/launch/: camera.launch.py  common.launch.py  controller.launch.py  lidar.launch.py  localization.launch.py
hamster-projectseminar-summer-2023/src/hamster_localization/: README.md  package.xml
hamster-projectseminar-summer-2023/src/tracking_controller/: package.xml
hamster-projectseminar-summer-2023/src/tracking_controller/include/tracking_controller/: point2d.hpp  simple_tracking_controller.hpp  trajectory.hpp
hamster-projectseminar-summer-2023/src/tracking_controller/src/: simple_tracking_controller.cpp
hamster_ros2_software/: instruction for ros2.txt
hamster_ros2_software/src/hamster_driver/: CMakeLists.txt  package.xml
hamster_ros2_software/src/hamster_interfaces/: package.xml
hamster_ros2_software/src/hamster_launch/: CMakeLists.txt  README.md
hamster_ros2_software/src/hamster_launch/launch/: camera.launch.py  common.launch.py
hamster_ros2_software/src/hamster_localization/: CMakeLists.txt
hamster_ros2_software/src/hamster_localization/include/hamster_localization/: only_optitrack_localization.hpp
hamster_ros2_software/src/hamster_localization/src/: only_optitrack_localization.cpp
hamster_ros2_software/src/tracking_controller/: CMakeLists.txt
hamster_ros2_software/src/tracking_controller/data/: test_traj.csv  test_traj_old.csv
hamster_ros2_software/src/tracking_controller/include/tracking_controller/: simple_tracking_controller.hpp
hamster_ros2_software/src/tracking_controller/src/: simple_tracking_controller.cpp  trajectory.cpp
msg/: EKF_estimate.msg
plot_result/: simulation_all imu_header tf_global-0.84.html
sim_result/: KF_halfway.csv  KF_nodelay_halfway.csv  MHE_halfway.csv  MHE_old.csv  MHE_old_nodelay.csv  MHE_old_nodelay_halfway.csv
