<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hamster_launch</name>
  <version>0.0.1</version>
  <description>Launch files for hamster</description>
  <maintainer email="lukas.theiner@iat.tu-darmstadt.de">theiner</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Externally provided packages -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <!-- Custom packages -->
  <exec_depend>hamster_driver</exec_depend>
  <exec_depend>tracking_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
