<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hamster_driver</name>
  <version>0.0.1</version>
  <description>Node mainly for serial communication with the hamster microcontroller.</description>
  <maintainer email="lukas.theiner@iat.tu-darmstadt.de">Lukas Theiner</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>hamster_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
